WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46769
Bundle should expose a reportException method
https://bugs.webkit.org/show_bug.cgi?id=46769
Summary
Bundle should expose a reportException method
Jessie Berlin
Reported
2010-09-28 17:06:28 PDT
There should be a WKBundleReportException analogous to WebView::reportException.
Attachments
Add InjectedBundle::reportException
(3.81 KB, patch)
2010-10-06 18:32 PDT
,
Jessie Berlin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jessie Berlin
Comment 1
2010-10-06 15:32:04 PDT
<
rdar://problem/8521276
>
Jessie Berlin
Comment 2
2010-10-06 18:32:20 PDT
Created
attachment 70023
[details]
Add InjectedBundle::reportException
John Sullivan
Comment 3
2010-10-06 21:11:30 PDT
Comment on
attachment 70023
[details]
Add InjectedBundle::reportException View in context:
https://bugs.webkit.org/attachment.cgi?id=70023&action=review
> WebKit2/WebProcess/InjectedBundle/InjectedBundle.cpp:232 > + // Make sure the context has a DOMWindow global object, otherwise this context didn't originate from a View.
I'm not sure if View with a capital V refers to a class or a named concept. Maybe this comment could be improved.
Jessie Berlin
Comment 4
2010-10-07 06:04:36 PDT
(In reply to
comment #3
)
> (From update of
attachment 70023
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=70023&action=review
> > > WebKit2/WebProcess/InjectedBundle/InjectedBundle.cpp:232 > > + // Make sure the context has a DOMWindow global object, otherwise this context didn't originate from a View. > > I'm not sure if View with a capital V refers to a class or a named concept. Maybe this comment could be improved.
You are right, when we are talking in WebKit2 terms that should be a Page. In WebKit1 terms that is a WebView. I will correct the comment. Thanks for the review! Jessie
Jessie Berlin
Comment 5
2010-10-07 07:59:13 PDT
Comment on
attachment 70023
[details]
Add InjectedBundle::reportException Comitted in
r69309
http://trac.webkit.org/changeset/69309
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug