Bundle should expose a reportException method. https://bugs.webkit.org/show_bug.cgi?id=46769

Reviewed by John Sullivan.

* WebProcess/InjectedBundle/API/c/WKBundle.cpp:
(WKBundleReportException):
* WebProcess/InjectedBundle/API/c/WKBundle.h:

* WebProcess/InjectedBundle/InjectedBundle.cpp:
(WebKit::InjectedBundle::reportException):
Mimic the behavior of WebView::reportException.
* WebProcess/InjectedBundle/InjectedBundle.h:



Canonical link: https://commits.webkit.org/59910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69309 268f45cc-cd09-0410-ab3c-d52691b4dbfc