WebKit2/WebProcess/InjectedBundle/InjectedBundle.h
@@ -105,6 +105,8 @@ public:
 
     void didReceiveMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::ArgumentDecoder*);
 
+    static void reportException(JSContextRef, JSValueRef exception);
+
 private:
     InjectedBundle(const String&);
 
